<resources>
    <string name="app_name">PetShop</string>
    <string name="border_collie_r_800_00">Border Collie R$ 800,00</string>
    <string name="pit_bull_r_750_00">Pit Bull R$ 750,00</string>
    <string name="pastor_alem_o_r_700_00">Pastor Alemão R$ 700,00</string>
    <string name="pastor_canadense_r_800_00">Pastor canadense R$ 800,00</string>
    <string name="f_mea">Fêmea</string>
    <string name="adestrado">Adestrado</string>
    <string name="calcular">Calcular</string>
    <string name="escolha_qual_cachorro_deseja">Escolha qual cachorro deseja:</string>
</resources>
